spring-deployment.yaml
---
# Service Spring Boot (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: devops
spec:
  selector:
    app: student-management
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
      nodePort: 30089
  type: NodePort
---
# Deployment Spring Boot
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
  namespace: devops
spec:
  replicas: 1  # Commencez avec 1 pour les tests
  selector:
    matchLabels:
      app: student-management
  template:
    metadata:
      labels:
        app: student-management
    spec:
      containers:
      - name: student-app
        image: chedlyrebai/student-management-app:latest  # REMPLACEZ-MOI!
        ports:
        - containerPort: 8089
