ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: student.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 8089
